# quick_compute

./: Cargo.toml  client.py  readme.md
src/: challenge.rs  main.rs
